# nalanda

./: .gitignore  README.md  main.py  pyproject.toml
config/: rag.yaml
src/evals/: eval.py
src/ingestion/chunking/: recursive.py
src/ingestion/data_loader/: json_data.py
src/llm/: __init__.py  base.py  huggingface.py  lightening_ai.py
src/pre_retrieval/: __init__.py  query_processing.py
src/prompts/: templates.yaml
src/retrieval/embeddings/: langchain.py
src/retrieval/vector_db/: chroma.py  faiss.py
src/utils/: config_loader.py
