[project]
name = "nalanda"
version = "0.1.0"
description = "An enterprise-grade Retrieval-Augmented Generation (RAG) engine for intelligent document storage, retrieval, and synthesis—inspired by the legendary ancient seat of universal knowledge."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "fastapi>=0.139.0",
    "flow-judge>=0.1.2",
    "hf-transfer>=0.1.9",
    "ipython>=9.15.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "uvicorn>=0.50.2",
]